# DS685work

./: README.md
Assignment-2/: README.md
Assignment-2/.devcontainer/: Dockerfile  devcontainer.json
Assignment-2/Assignment-2/: docker-compose.yml
Assignment-2/Assignment-2/.devcontainer/Assignment-2/.devcontainer/: Dockerfile
Assignment-2/Assignment-2/db/: init.sql
Assignment-2/Assignment-2/ros_ws/src/: CMakeLists.txt
Assignment-2/Assignment-2/ros_ws/src/cam_pub/: package.xml
Assignment-2/Assignment-2/ros_ws/src/cam_pub/cam_pub/: cam_pub_node.py
Assignment-2/Assignment-2/ros_ws/src/objdet/objdet/: objdet_node.py
Assignment-2/db/: init.sql
Assignment-2/ros_ws/src/cam_pub/: setup.py
Assignment-2/ros_ws/src/cam_pub/cam_pub/: cam_pub_node.py
Assignment-2/ros_ws/src/objdet/: package.xml  setup.py
Assignment-2/ros_ws/src/objdet/objdet/: objdet_node.py
Assignment3/video2plan/: .gitignore  README.md  requirements.txt
Assignment3/video2plan/pddl/: domain.pddl
Assignment3/video2plan/pddl/problems/: problem_manual1.pddl  problem_manual2.pddl  problem_manual3.pddl  problem_test.pddl  problem_test_first.pddl  problem_test_last.pddl  problem_test_mid.pddl
Assignment3/video2plan/scripts/: 01_extract_frames.py  02_detect_blocks_owlvit.py  03_build_states.py  03b_build_states_multi.py  04_generate_problems.py  05_validate_with_up.py
